[project]
name = "vpn-manager"
version = "0.1.0"
description = "VPN manager based on the sing box core"
readme = "README.md"
authors = [
    { name = "Vlad Korneev", email = "veenrok@veenrok.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
hooks = [
    "pre-commit>=4.2.0",
]
format = [
    "ruff>=0.12.0",
]
